@@ -7374,7 +7374,7 @@
 2000-09-01  Gerd Moellmann  <gerd@gnu.org>
 
 	* lread.c (read1): Accept `?' as symbol constituent, for
-	compatiblity with XEmacs.
+	compatibility with XEmacs.
 
 2000-08-31  Stefan Monnier  <monnier@cs.yale.edu>
 
